# tensorimage

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
benches/: compare.py  compare_dataloader.py  compare_transforms.py
crates/tensorimage-core/: Cargo.toml
crates/tensorimage-core/src/: augment.rs  batch.rs  crop.rs  decode.rs  dedup.rs  error.rs  exif.rs  jpeg_info.rs  lib.rs  normalize.rs  phash.rs  pipeline.rs  pool.rs  resize.rs
crates/tensorimage-python/: Cargo.toml
crates/tensorimage-python/src/: augment.rs  hash.rs  lib.rs  load.rs
python/tensorimage/: __init__.py  aesthetic.py  data.py  transforms.py
tests/: generate_fixtures.py  test_augmentations.py  test_data.py  test_decode.py  test_filter.py  test_phase8.py  test_tensor_output.py  test_transforms.py
