[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tensorimage"
version = "0.1.0"
requires-python = ">=3.9"

[tool.maturin]
manifest-path = "crates/tensorimage-python/Cargo.toml"
module-name = "tensorimage._tensorimage"
python-source = "python"
features = ["pyo3/extension-module"]
